<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".detail.CarDetailAc">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_above="@+id/det_book_btn"
        android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <android.support.v4.view.ViewPager
        android:id="@+id/det_image_slider"
        android:layout_width="match_parent"
        android:layout_height="250dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:id="@+id/det_image_pos"
            android:layout_alignBottom="@+id/det_image_slider"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="17dp" />

    <LinearLayout
        android:id="@+id/det_main_lin"
        android:layout_below="@+id/det_image_slider"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <com.logitrips.userapp.util.CircleImageView
        android:id="@+id/det_driver_img"
        android:layout_width="95dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/menu_account"
        android:layout_height="95dp"
        app:border_color="@android:color/transparent"
        app:border_width="0dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/det_driver_name"
        android:textStyle="bold"

        android:textColor="@android:color/black"
        android:textSize="18sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/det_country"

            android:textColor="@android:color/black"
            android:textSize="18sp"/>
        <RatingBar
            android:id="@+id/det_rating"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:isIndicator="true"
            android:numStars="5"
            android:stepSize="0.1"
            android:rating="1"
            />
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_margin="10dp"
        android:background="@color/text_gray"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:padding="10dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_gray"
                android:text="@string/driving_experience"/>
            <TextView
                android:id="@+id/det_driving_exp"
                android:paddingLeft="10dp"
                android:gravity="right"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_margin="10dp"
            android:background="@color/text_gray"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:padding="10dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_gray"
                android:text="@string/knowledge_of_location"/>
            <TextView
                android:id="@+id/det_know_loc"
                android:paddingLeft="10dp"
                android:gravity="right"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_margin="10dp"
            android:background="@color/text_gray"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:padding="10dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_gray"
                android:text="@string/lang_skills"/>
            <TextView
                android:id="@+id/det_lang_skills"
                android:paddingLeft="10dp"
                android:gravity="right"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/label_text"
            android:padding="10dp"
            android:textColor="@color/text_gray"
            android:text="@string/car_info"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:padding="10dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_gray"
                android:text="@string/car_model_year"/>
            <TextView
                android:id="@+id/det_car_model"
                android:paddingLeft="10dp"
                android:gravity="right"

                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_margin="10dp"
            android:background="@color/text_gray"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:padding="10dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_gray"
                android:text="@string/car_type"/>
            <TextView
                android:id="@+id/det_car_type"
                android:paddingLeft="10dp"
                android:gravity="right"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_margin="10dp"
            android:background="@color/text_gray"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:padding="10dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_gray"
                android:text="@string/hourly_fee"/>
            <TextView
                android:id="@+id/det_hourly_fee"
                android:paddingLeft="10dp"
                android:gravity="right"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_margin="10dp"
            android:background="@color/text_gray"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:padding="10dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_gray"
                android:text="@string/daily_fee"/>
            <TextView
                android:id="@+id/det_daily_fee"
                android:paddingLeft="10dp"
                android:gravity="right"
                android:textStyle="bold"
                android:textColor="@color/orange"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textColor="@color/text_gray"
            android:background="@color/label_text"
            android:text="@string/trip_info"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:padding="10dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_gray"
                android:text="@string/location"/>
            <TextView
                android:id="@+id/det_location"
                android:paddingLeft="10dp"
                android:gravity="right"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_margin="10dp"
            android:background="@color/text_gray"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:padding="10dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_gray"
                android:text="@string/date"/>
            <TextView
                android:id="@+id/det_date"
                android:paddingLeft="10dp"
                android:gravity="right"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_margin="10dp"
            android:background="@color/text_gray"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:padding="10dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_gray"
                android:text="@string/duration"/>
            <TextView
                android:id="@+id/det_duration"
                android:paddingLeft="10dp"
                android:gravity="right"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                />
        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textColor="@color/text_gray"
            android:background="@color/label_text"
            android:text="@string/review"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:padding="10dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_gray"
                android:text="@string/average_rating"/>
            <TextView
                android:id="@+id/det_average_rating"
                android:paddingLeft="10dp"

                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <TextView
                android:id="@+id/det_see_all"
                android:paddingLeft="10dp"
                android:gravity="right"


                android:textColor="@color/orange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_margin="10dp"
            android:background="@color/text_gray"/>

    </LinearLayout>
    </RelativeLayout>
    </ScrollView>
    <Button
        android:id="@+id/det_book_btn"
        android:textColor="@android:color/white"
        android:layout_width="match_parent"
        android:background="@drawable/orange_btn"
        android:layout_alignParentBottom="true"
        android:layout_height="wrap_content"
        android:text="@string/book_this_car"/>
</RelativeLayout>
